Changed drawing methode from canvas to css, requested fixes done

--- a/language/nb.json
+++ b/language/nb.json
@@ -66,6 +66,10 @@
           "default": "Uriktige ord"
         },
         {
+          "label": "Antall hints etikett",
+          "default": "Hint"
+        },
+        {
           "label": "Prøv igjen etikett",
           "default": "Prøv igjen"
         }
